--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Bootcamp 2020 Aman Mirza. hello world</h1>
+    <h1>Bootcamp 2020 Aman Mirza.And hello world</h1>
   </body>
 </html>
